# ChangePlatAutoNext

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  install.py  pyproject.toml
.github/workflows/: ci.yml
docs/: current_project_understanding.md  license_policy.md  migration_plan.md  release_checklist.md  repository_structure.md  software_architecture_design.md
docs/adr/: 0001-use-python-pyqt6.md  0002-use-clean-architecture.md  0003-gcode-fail-fast.md
docs/api/: channel_mapping_contract.md  module_contracts.md
docs/user/: install_and_build.md  modern_ui_design.md  workflows.md
docs/vibecoding/: agent_playbook.md  implementation_backlog.md
examples/: SpeedBoatRace_Bambu+Pla+Basic_A1_Mini.gcode.3mf  queue.example.json
packaging/: pyinstaller_entry.py
packaging/assets/: app_icon.icns
requirements/: build.txt  desktop.txt  dev.txt  runtime.txt
resources/: default_finish_sound.gcode  default_settings.json
scripts/: README.md
src/change_plate_next/application/: merge_planner.py  progress.py  workflow.py
src/change_plate_next/domain/: channel_mapping.py  errors.py  models.py  policies.py
src/change_plate_next/ports/: connect.py  package.py
src/change_plate_next/resources/: default_change_plate.gcode  (+1 more)
tests/: conftest.py
tests/fixtures/: build_3mf.py
tests/integration/: test_cli.py  test_export_workflow.py
tests/unit/: test_archive_guard.py  test_channel_mapping.py  test_desktop_app.py  test_desktop_theme.py  test_gcode_pipeline.py  test_i18n.py  test_legacy_crypto.py  test_scaffold_imports.py
(+18 files in other folders)
